@@ -4,6 +4,9 @@ Important changes in 1.9 (2019-03-XX) YET UNRELEASED
 
 * Feature: Added transcode videos to frame images option. Video files can be mounted to folders with jpg/png/bmp files for
          each video frame.
+* Feature: Reencode to same file format as source file. Normally files that already have the selected output format ill not
+         be recoded. Added --recodesame option to allow transcoding to the same format, either if the target results in
+	 the same or smaller size, or always.
 
 Important changes in 1.8 (2019-03-XX) YET UNRELEASED
 
